[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apt"
version = "0.7"
requires-python = ">=3.10"
authors = [
    { name = "Tang, Cheng-Yang(Louis)", email = "louis.tang@thermofisher.com" },
]
dependencies = [
    "polars >= 0.17",
    "humanfriendly == 10.0",
    "numpy",
    "pandas >= 2.0",
]

[dependency-groups]
dev = [
    "pytest >= 6.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apt = ["resources/*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
markers = [
    "slow",
]
