[metadata]
name = apt
version = 0.1.0
author = Tang, Cheng-Yang(Louis)
author_email = louis.tang@thermofisher.com

[options]
packages = apt
package_dir = 
    =src
python_version = >=3.10.0
install_requires = 
    polars >= 0.17
    sqlalchemy == 1.4.47
    matplotlib >= 3.2.0
    humanfriendly == 10.0
    scipy >= 1.10
    colorcet >= 3
    vcf


[options.package_data]
axiom = resources/*

[options.entry_points]
console_scripts = 
    apt = apt.__main__:main
