[metadata]
name = apt
version = 0.4.0
author = Tang, Cheng-Yang(Louis)
author_email = louis.tang@thermofisher.com

[options]
packages = apt
package_dir = 
    =src
python_version = >=3.10.0
install_requires = 
    polars >= 0.17
    humanfriendly == 10.0


[options.package_data]
apt = resources/*

# [options.entry_points]
# console_scripts = 
#     apt = apt.__main__:main
